[package]
name = "myos2026"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "myos2026"
test = false
bench = false

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
